Upgrade replatform to junit5 (#33)
* Use openrewrite to upgrade to Junit5

* Apply @MockitoSettings with Strictness.LENIENT to all test classes with lenient stubbings

* Resolve unnecessary stubbings where simple to do

* Fix PipelineMappingServiceTest to properly test  null coordinate scenarios

* Fix assertThrows to catch from the correct action

* Fix broken tests

* Fix teams package

* Remove use of @RunWith(SpringRunner.class)